# worldengine

./: .gitignore  .gitignore.REMOVED.git-id  .pre-commit-config.yaml  .python-version  .travis.yml  .travis.yml.REMOVED.git-id  CHANGELOG.md  CNAME  Dockerfile  LICENSE  LICENSE.REMOVED.git-id  LICENSE.txt  LICENSE.txt.REMOVED.git-id  MANIFEST.in  MANIFEST.in.REMOVED.git-id  README.md  README.md.REMOVED.git-id  appveyor.yml  appveyor.yml.REMOVED.git-id  base.txt  base.txt.REMOVED.git-id  biomeexample.py  biomeexample.py.REMOVED.git-id  biomes.scm  changelog.txt  changelog.txt.REMOVED.git-id  civilizationexample.py  civilizationexample.py.REMOVED.git-id  create_ancient.sh  create_ancient.sh.REMOVED.git-id  game_generator.py  game_generator.py.REMOVED.git-id  generate_protobuf_stubs.sh  generate_protobuf_stubs.sh.REMOVED.git-id  index.html  namesexample.py  namesexample.py.REMOVED.git-id  params.json  pyproject.toml  requirements-dev.txt  (+24 more)
.github/: copilot-instructions.md
app/: __init__.py  __init__.py.REMOVED.git-id  atomic.py  atomic.py.REMOVED.git-id  forms.py  forms.py.REMOVED.git-id  models.py  models.py.REMOVED.git-id  views.py  views.py.REMOVED.git-id
appveyor/: install.ps1  install.ps1.REMOVED.git-id  install_hdf5.ps1  run_with_compiler.cmd.REMOVED.git-id
atoms/: .directory  .directory.REMOVED.git-id  dever_f  dever_f.REMOVED.git-id  dever_m  dever_m.REMOVED.git-id  dragon  dragon.REMOVED.git-id  dwarves  dwarves.REMOVED.git-id  elves_d  elves_d.REMOVED.git-id  elves_f  elves_f.REMOVED.git-id  elves_m  elves_m.REMOVED.git-id  elves_t  elves_t.REMOVED.git-id  fantasy  fantasy.REMOVED.git-id  felana  felana.REMOVED.git-id  general  general.REMOVED.git-id  harn_cln  harn_cln.REMOVED.git-id  harn_f  harn_f.REMOVED.git-id  harn_f2  harn_f2.REMOVED.git-id  harn_gar  harn_gar.REMOVED.git-id  harn_k_f  harn_k_f.REMOVED.git-id  harn_k_m  harn_k_m.REMOVED.git-id  harn_m  harn_m.REMOVED.git-id  harn_m2  harn_m2.REMOVED.git-id  (+24 more)
docker/: Dockerfile  requirements.txt
docs/: Biomes.html
examples/: ancient_map_large.png.REMOVED.git-id  ancient_map_seed1.png.REMOVED.git-id  ancient_map_seed2.png.REMOVED.git-id  rivers.png.REMOVED.git-id  world_seed_1_biome.png.REMOVED.git-id  world_seed_1_elevation.png.REMOVED.git-id  world_seed_1_ocean.png.REMOVED.git-id  world_seed_1_precipitation.png.REMOVED.git-id  world_seed_1_temperature.png.REMOVED.git-id
game/: basic.py  basic.py.REMOVED.git-id  civilizations.py  civilizations.py.REMOVED.git-id  events.py  events.py.REMOVED.git-id  game.py  game.py.REMOVED.git-id  gamegen.py  gamegen.py.REMOVED.git-id  generator.py  generator.py.REMOVED.git-id  mechanic.py  mechanic.py.REMOVED.git-id  races.py  races.py.REMOVED.git-id
games/: Beta.game.REMOVED.git-id
lands/: World.proto  World.proto.REMOVED.git-id  __init__.py  __init__.py.REMOVED.git-id  basic_map_operations.py  basic_map_operations.py.REMOVED.git-id  biome.py  biome.py.REMOVED.git-id  biome_explorer.py  biome_explorer.py.REMOVED.git-id  common.py  common.py.REMOVED.git-id  draw.py  draw.py.REMOVED.git-id  drawing_functions.py  drawing_functions.py.REMOVED.git-id  erosion_generator.py  erosion_generator.py.REMOVED.git-id  generation.py  generation.py.REMOVED.git-id  generator.py  generator.py.REMOVED.git-id  geo.py  geo.py.REMOVED.git-id  gui.py  gui.py.REMOVED.git-id  guiqt.py  guiqt.py.REMOVED.git-id  guitk.py  plates.py  plates.py.REMOVED.git-id  step.py  step.py.REMOVED.git-id  version.py.REMOVED.git-id  views_generator.py  views_generator.py.REMOVED.git-id  water_generator.py  water_generator.py.REMOVED.git-id  world.py  world.py.REMOVED.git-id
lang_samples/: beowulf.txt  beowulf.txt.REMOVED.git-id  celticmyth.txt  celticmyth.txt.REMOVED.git-id  elven.txt  elven.txt.REMOVED.git-id  french_cities.txt  french_cities.txt.REMOVED.git-id  greek.txt  greek.txt.REMOVED.git-id  hebrew.txt  italian_cities.txt  (+20 more)
(+337 files in other folders)
